--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,24 @@
-/node_modules
+*.iml
+.idea/
+.ipr
+.iws
+*~
+~*
+*.diff
+*.patch
+*.bak
+.DS_Store
+Thumbs.db
+.project
+.*proj
+.svn/
+*.swp
+*.swo
+*.pyc
+*.pyo
+node_modules
+dist
+dist*
+npm-debug.log
+yarn-error.log
+build
