--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "wp4",
+  "name": "react-cms",
   "version": "1.0.0",
-  "description": "",
+  "description": "后台管理系统",
   "main": "webpack.config.js",
   "scripts": {
-    "build": "webpack --mode development",
-    "dev": "webpack-dev-server --open --mode development"
+    "build": "rm -rf ./dist && webpack --env.prd --mode production",
+    "stg": "rm -rf ./dist && webpack --env.stg --mode production",
+    "dev": "webpack-dev-server --open --env.dev --mode development",
+    "dll": "webpack -p --env.dll"
   },
   "keywords": [],
-  "author": "",
+  "author": "guomaoqiang",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -16,21 +18,25 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "happypack": "^5.0.0-beta.3",
     "html-webpack-plugin": "^3.1.0",
-    "jquery": "^3.3.1",
+    "ip": "^1.1.5",
+    "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "purify-css": "^1.2.5",
     "purifycss-webpack": "^0.7.0",
+    "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.13",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "webpack-merge": "^4.1.2",
+    "webpack-parallel-uglify-plugin": "^1.1.0"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "react": "^16.3.1"
   }
 }
