--- a/.babelrc
+++ b/.babelrc
@@ -9,5 +9,9 @@
         }
       }
     ],["react"]
+  ],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-class-properties"
   ]
 }
