--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,7 @@
     ],["react"],"stage-0"
   ],
   "plugins": [
+    ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }], 
     [
       "transform-runtime", {
         "helpers": false,
@@ -20,6 +21,6 @@
       }
     ],
     "transform-decorators-legacy",
-    "transform-class-properties"
+    "transform-class-properties",
   ]
 }
