--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "bundle-loader": "^0.5.6",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "4.0.0-beta.0",
     "happypack": "^5.0.0-beta.3",
     "html-webpack-plugin": "^3.1.0",
     "ip": "^1.1.5",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
     "postcss-loader": "^2.1.3",
     "purify-css": "^1.2.5",
@@ -35,14 +36,14 @@
     "react-hot-loader": "^4.0.1",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.20.3",
-    "webpack": "^4.2.0",
+    "webpack": "4.4.0",
     "webpack-cli": "^2.0.13",
     "webpack-dev-server": "^3.1.1",
     "webpack-merge": "^4.1.2",
     "webpack-parallel-uglify-plugin": "^1.1.0"
   },
   "dependencies": {
-    "antd": "^3.4.1",
+    "antd": "^3.0.1",
     "axios": "^0.18.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
